--- a/DemoApp/ShellView.xaml
+++ b/DemoApp/ShellView.xaml
@@ -1,12 +1,8 @@
-<Window x:Class="DemoApp.ShellView"
+﻿<Window x:Class="DemoApp.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
-    <Grid Background="White">
-        <TextBlock Text="Hello Caliburn Micro!"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="ShellView" Height="300" Width="300">
+    <Grid>
+        
     </Grid>
-
 </Window>
