--- a/DemoApp/ShellView.xaml
+++ b/DemoApp/ShellView.xaml
@@ -9,25 +9,21 @@
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <TextBlock Text="First Name" ></TextBlock>
-        <TextBox Grid.Column="1" Text="{Binding FirstName}" ></TextBox>
-        <TextBlock Grid.Column="2" Text="{Binding FirstName}"></TextBlock>
+    
+        <StackPanel Margin="10">
+            <TextBlock>First Name</TextBlock>
+            <TextBox Name="FirstName"></TextBox>
+            <TextBlock>Last Name</TextBlock>
+            <TextBox Name="LastName"></TextBox>
+            <TextBlock>Age</TextBlock>
+            <TextBox Name="Age"></TextBox>
+        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,10,0,0" >
+            <Button Name="Cancel" Width="50" Margin="10"> Cancel </Button>
+            <Button Name="Save" Width="50" Margin="10">Save</Button>
+        </StackPanel>
+        </StackPanel>
 
 
-        <Button Grid.Row="1" x:Name="Save">Save</Button>
-
-        <ComboBox ItemsSource="{Binding Customers}" ItemTemplate="{StaticResource CustomerTemplate}" ></ComboBox>
-    </Grid>
+       
+       
 </Window>
